--- a/css/maingame.css
+++ b/css/maingame.css
@@ -49,7 +49,8 @@ hr {
      padding-right: 46%;
  }
 
- .questions a {
+ .questions button {
+     background-color: #FF8917;
      text-align: center;
      text-decoration: none;
      transition-duration: 0.3s;
@@ -57,10 +58,13 @@ hr {
      color: #002886
  }
 
- .questions button {
-     background-color: #FF8917;
- }
-
  .questions button:hover {
      opacity: 90%;
  }
+
+ .text p {
+     border-color: #506699;
+     font-style: italic;
+ }
+
+ 
