--- a/css/homepage.css
+++ b/css/homepage.css
@@ -95,3 +95,14 @@ table {
     border-collapse: collapse;
     width: 100%;
 }
+
+.enterButton{
+    background-color:#E6B645;
+    border: none;
+    margin-left: 5px;
+    color: #00325c;
+    border: 1px solid #00325c;
+    text-align: center;
+    font-size: 16px;
+    transition: 0.3s;
+}
